--- a/src/ClientApp/address-book/src/app/address-book/address-book.component.scss
+++ b/src/ClientApp/address-book/src/app/address-book/address-book.component.scss
@@ -23,6 +23,12 @@
   }
 }
 
+.no-data-message {
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  margin: 1em;
+}
+
 .error-content {
     margin: 1em;
 }
@@ -37,6 +43,7 @@
 
 .error-message {
   font-family: 'Roboto', sans-serif;
+  font-size: 20px;
   margin: 1em;
 }
 
