--- a/src/ClientApp/address-book/src/app/address-summary/address-summary.component.scss
+++ b/src/ClientApp/address-book/src/app/address-summary/address-summary.component.scss
@@ -7,6 +7,11 @@ mat-card {
     background-color: #FFFFFF !important;
   }
 
+  h5 {
+    margin: 10px 0px;
+    color: #336;
+  }
+
   mat-card-subtitle {
     color: #444;
     font-weight: normal;
