--- a/src/ClientApp/address-book/src/app/address-summary/address-summary.component.html
+++ b/src/ClientApp/address-book/src/app/address-summary/address-summary.component.html
@@ -10,7 +10,9 @@
     <mat-icon>delete</mat-icon>
   </button>
   <mat-card-header>
-    <mat-card-title>{{ data.fullName }}</mat-card-title>
+    <mat-card-title
+      ><h5>{{ data.fullName }}</h5></mat-card-title
+    >
     <mat-card-subtitle>{{ data.lastModifiedOrCreatedStr }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
