--- a/src/ClientApp/address-book/src/app/address-details/address-details.component.scss
+++ b/src/ClientApp/address-book/src/app/address-details/address-details.component.scss
@@ -1,8 +1,12 @@
 .modal-dialog {
+  display: flex;
   background-color: #FFF;
   padding: 20px;
   width: calc(100% - 40px);
-  height: 100%;
+  min-height: 100%;
+  flex-grow: 1;
+  background-color: #FFF;
+  color: #000;
 
   h2, [mat-dialog-content] {
     font-family: 'Roboto', sans-serif;
@@ -14,8 +18,31 @@
     color: #336;
   }
 
+  .modal-dialog-content {
+    display: grid;
+    width: 100%;
+    background-color: #FFF;
+    color: #000;
+  }
+
+  [mat-dialog-title] {
+    position: relative;
+  }
+
+  [mat-dialog-content] {
+    position: relative;
+  }
+
+  [mat-dialog-actions] {
+    position: relative;
+    background-color: #FFF;
+    color: #000;
+    padding: 20px;
+  }
+
   .app-form {
     display: grid;
+    width: 100%;
   }
 
   .grid-row-1 {
@@ -58,9 +85,50 @@
     grid-row: 10;
   }
 
+  .grid-row-11 {
+    grid-row: 11;
+  }
+
+  .grid-row-12 {
+    grid-row: 12;
+  }
+
+  .grid-row-13 {
+    grid-row: 13;
+  }
+
+  .grid-row-14 {
+    grid-row: 14;
+  }
+
+  .grid-row-15 {
+    grid-row: 15;
+  }
+
+  .grid-row-16 {
+    grid-row: 16;
+  }
+
+  .grid-row-17 {
+    grid-row: 17;
+  }
+
+  .grid-row-18 {
+    grid-row: 18;
+  }
+
+  .grid-row-19 {
+    grid-row: 19;
+  }
+
+  .grid-row-20 {
+    grid-row: 20;
+  }
+
   .app-form-field {
     background-color: #FFF;
     color: #000;
+    width: 100%;
 
     .mat-mdc-text-field-wrapper.mdc-text-field.mdc-text-field--filled {
       background-color: #FFF;
@@ -95,7 +163,25 @@
   .delete-btn {
     position: absolute;
     right: 20px;
-    top: 7.5px;
+    top: 25px;
     border-color: var(--mdc-icon-button-icon-color);
+  }
+
+  [mat-icon-button][disabled] {
+    color: var(--mdc-icon-button-icon-color);
+  }
+
+  [mat-icon-button][disabled][color=accent] {
+    color: var(--mdc-icon-button-icon-color);
+  }
+
+  .mat-mdc-raised-button[disabled], .mat-mdc-raised-button.mat-mdc-button-disabled {
+    color: var(--mdc-icon-button-icon-color);
+    background-color: #444;
+  }
+
+  .address-loading-waiter {
+    background-color: #FFF;
+    padding: 20px;
   }
 }
